# Crys_JEPA

./: .gitignore  III_base_gen.py  II_train_base.py  IV_relax.py  I_train_jepa.py  README.md  VIII_final_eval.py  VII_final_gen.py  VI_ft_base.py  V_screen.py  pyproject.toml  relax_worker.py  requirements.txt
components/base/: dataloader.py
components/base/model/: ddpm.py  frac.py  matrix.py  transformer.py  type.py
components/finetune/: dataloader.py
components/jepa/: augmentation.py  dataloader.py
configs/: default.yaml
configs/ablation/: crys_jepa.yaml  crys_jepa_dft.yaml  dft.yaml
configs/base/: alex_mp_20.yml  mp_20.yml
configs/finetune/: alex_mp_20.yml  mp_20.yml
configs/finetune_dft_jepa/: frozen.yaml  last1.yaml  last2.yaml
configs/jepa/: mp.yml
eval/vsun/: evaluator.py  relax.py  structure_summary.py  utils.py
logs/jepa/: backup-config.yaml
notebooks/: colab_dft_jepa_training.ipynb  local_dft_jepa_training.ipynb
scripts/: _bootstrap.py  evaluate_mvp.py  infer_cif.py  run_dft_ablation.py  run_multiseed_ablation.py  run_partial_finetune.py  train_mvp.py
src/: __init__.py  infer.py
src/datasets/: __init__.py  threedsc_dataset.py
src/models/: __init__.py  crys_jepa_wrapper.py  superconductivity_heads.py
src/training/: __init__.py  evaluate.py  losses.py  run_evaluate.py  train.py
src/utils/: __init__.py  cif_utils.py  dft_features.py  metrics.py  seed.py
tests/: test_scripts_imports.py  test_superconductivity_mvp.py  test_training_checkpoint.py
utils/: config.py  crys_utils.py  set_logger.py  utils.py
(+7 files in other folders)
